fix: Page overflow

--- a/components/ProductSlider/ProductSlider.module.scss
+++ b/components/ProductSlider/ProductSlider.module.scss
@@ -2,6 +2,7 @@
 
 .ProductSlider {
 	position: relative;
+	overflow-x: hidden;
 	
 	.ProductSlider__control {
 		display: none;
