--- a/styles/Product.module.scss
+++ b/styles/Product.module.scss
@@ -1,7 +1,7 @@
 @import '/styles/functions';
 
 .Product {
-	overflow-x: hidden;
+//	overflow-x: hidden;
 	
 	button {
 		cursor: pointer;
@@ -587,6 +587,11 @@
 				}
 			}
 		}
+		
+		.Product__price {
+			position: sticky;
+			top: 0;
+		}
 	}
 	
 	.Product__button_fixed {
@@ -648,7 +653,7 @@
 			.Product__discounts {
 				& > div > div {
 					.Product__discount {
-						padding-left: 18%;
+						padding-left: 22%;
 					}
 				}
 			}
@@ -659,6 +664,9 @@
 @media (min-width: 768px) {
 	.Product {
 		.Product__container {
+			display: grid;
+			grid-template-columns: 5fr 2fr;
+			
 			.Product__title {
 				padding: rem(8px) 0 rem(16px) 0;
 				font-size: rem(28px);
@@ -941,6 +949,10 @@
 					display: flex;
 				}
 			}
+		}
+		
+		.Product__button_fixed {
+			display: none;
 		}
 	}
 }
